--- a/Rewrites/MyBlockAds.conf
+++ b/Rewrites/MyBlockAds.conf
@@ -1,5 +1,5 @@
 # utf-8
-# 2022-07-14 15:44
+# 2022-07-14 16:20
 # 对【哔哩哔哩、微博、油管、知乎】的开屏广告和应用内广告进行处理，是对【AdvertisingLite.conf】的去重和补充
 
 # 引用地址 https://github.com/ddgksf2013/Cuttlefish/blob/master/Rewrite/MyAdRule.conf
@@ -56,12 +56,42 @@
 ## 跳过微信中转页面，解除被封禁链接//weixin110.qq.com, security.wechat.com
 ^https\:\/\/(weixin110\.qq|security.wechat)\.com\/cgi-bin\/mmspamsupport-bin\/newredirectconfirmcgi\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/wechat110.js
 
-# 哔哩哔哩 //app.bilibili.com
-# 配合分流 host, grpc.biliapi.net, reject
-# 但是会造成动态加载时间过长
-## 开屏页广告,推荐页广告,动态(最常访问/推荐话题/列表广告),视频播放页面(up主推荐广告,相关推荐广告) //app.bilibili.com
+# 哔哩哔哩 //app.bilibili.com, api.bilibili.com, manga.bilibili.com, api.vc.bilibili.com, api.biliapi.net, api.live.bilibili.com
+## 屏蔽IP请求 //app.bilibili.com
+^https?:\/\/app\.bilibili\.com\/x\/resource\/ip url reject
+## 小卡片广告 //api.bilibili.com
+^https?:\/\/api\.bilibili\.com\/pgc\/season\/player\/cards url reject-dict
+## Material_Ad //api.bilibili.com
+^https?:\/\/api\.bilibili\.com\/x\/vip\/ads\/material\/report url reject-dict
+## 漫画去广告 //manga.bilibili.com
+^https?:\/\/manga\.bilibili\.com\/twirp\/comic\.v\d\.Comic\/(Flash|ListFlash) url reject-dict
+## 可能的一些推广(beta) //api.bilibili.com
+^https?:\/\/api\.bilibili\.com\/pgc\/season\/app\/related\/recommend\? url reject-dict
+## 去除动态中的话题 //api.vc.bilibili.com
+^https?:\/\/api\.vc\.bilibili\.com\/topic_svr\/v1\/topic_svr url reject-dict
+## 去除搜索中的大家都在搜 //api.vc.bilibili.com
+^https?:\/\/api\.vc\.bilibili\.com\/search_svr\/v\d\/Search\/recommend_words url reject
+## 屏蔽DefaultWord //app.bilibili.com
+^https?:\/\/app\.bilibili\.com\/x\/v2\/search\/defaultwords url reject-dict
+^https?:\/\/app\.bilibili\.com\/bilibili\.app\.interface\.v1\.Search\/Default url reject
+## 热搜发现 //app.bilibili.com
+^https?:\/\/app\.bilibili\.com\/x\/v2\/search\/square url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
+## 观影页面去广告 //api.bilibili.com, api.biliapi.net
+^https?:\/\/api\.(bilibili|biliapi)\.(com|net)\/pgc\/page\/cinema\/tab\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
+## 追番去广告 //api.bilibili.com, api.biliapi.net
+^https?:\/\/api\.(bilibili|biliapi)\.(com|net)\/pgc\/page\/bangumi url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
+## 去除强制设置的皮肤 //app.bilibili.com
+^https?:\/\/app\.bilibili\.com\/x\/resource\/show\/skin\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
+## 1080P高码率+4K画质(番剧和影视除外) //app.bilibili.com
+^https?:\/\/app\.bilibili\.com\/x\/v2\/account\/myinfo\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
+## 直播去广告 //api.live.bilibili.com
+^https?:\/\/api\.live\.bilibili\.com\/xlive\/app-room\/v1\/index\/getInfoByRoom url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
+## 动态去广告 //api.vc.bilibili.com
+^https?:\/\/api\.vc\.bilibili\.com\/dynamic_svr\/v1\/dynamic_svr\/dynamic_(history|new)\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
+## 我的页面处理 //app.bilibili.com
+^https?:\/\/app\.bilibili\.com\/x\/v2\/account\/mine url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
+# 去除开屏广告,首页右上角游戏中心、推广,修改底部tab栏,去除推荐广告、创作者推广
 ^https?:\/\/app\.bilibili\.com\/x\/(v2\/(splash\/(list|show)|feed\/index\?)|resource\/show\/tab\/v2) url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_json.js
-^https?:\/\/app\.bilibili\.com\/bilibili\.app\.(view\.v1\.View\/View|dynamic\.v2\.Dynamic\/DynAll)$ url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_proto.js
 
 # 微博 //*.uve.weibo.com, api.weibo.cn, mapi.weibo.com, vip.storage.weibo.com
 ## 去除开屏广告 //*.uve.weibo.com
@@ -138,4 +168,4 @@
 ## 屏蔽网页版强制登陆弹窗 //static.zhihu.com
 ^https?:\/\/static\.zhihu\.com\/[^\/]+\/(main|column)\.signflow\.[^.]+.js url reject-200
 
-hostname = zimuku.pw, zimuku.org, amdc.m.taobao.com, cdn.*.chelaileapp.cn, gab.122.gov.cn, links.jianshu.com, www.jianshu.com, weibo.cn, shop.sc.weibo.com, t.cn, sinaurl.cn, link.zhihu.com, ad.12306.cn, edith.xiaohongshu.com, mp.weixin.qq.com, weixin110.qq.com, security.wechat.com, app.bilibili.com, *.uve.weibo.com, api.weibo.cn, mapi.weibo.com, vip.storage.weibo.com, -redirector*.googlevideo.com, *.googlevideo.com, www.youtube.com, s.youtube.com, youtubei.googleapis.com, 103.41.167.226, 103.41.167.234, 103.41.167.235, 103.41.167.236, api.zhihu.com, appcloud2.zhihu.com, www.zhihu.com, zhuanlan.zhihu.com, static.zhihu.com
+hostname = zimuku.pw, zimuku.org, amdc.m.taobao.com, cdn.*.chelaileapp.cn, gab.122.gov.cn, links.jianshu.com, www.jianshu.com, weibo.cn, shop.sc.weibo.com, t.cn, sinaurl.cn, link.zhihu.com, ad.12306.cn, edith.xiaohongshu.com, mp.weixin.qq.com, weixin110.qq.com, security.wechat.com, app.bilibili.com, api.bilibili.com, manga.bilibili.com, api.vc.bilibili.com, api.biliapi.net, api.live.bilibili.com, *.uve.weibo.com, api.weibo.cn, mapi.weibo.com, vip.storage.weibo.com, -redirector*.googlevideo.com, *.googlevideo.com, www.youtube.com, s.youtube.com, youtubei.googleapis.com, 103.41.167.226, 103.41.167.234, 103.41.167.235, 103.41.167.236, api.zhihu.com, appcloud2.zhihu.com, www.zhihu.com, zhuanlan.zhihu.com, static.zhihu.com
