--- a/Rewrites/MyBlockAds.conf
+++ b/Rewrites/MyBlockAds.conf
@@ -1,5 +1,5 @@
 # utf-8
-# 2022-07-14 16:25
+# 2022-07-14 16:41
 # 对【哔哩哔哩、微博、油管、知乎】的开屏广告和应用内广告进行处理，是对【AdvertisingLite.conf】的去重和补充
 
 # 引用地址 https://github.com/ddgksf2013/Cuttlefish/blob/master/Rewrite/MyAdRule.conf
@@ -57,6 +57,8 @@
 ^https\:\/\/(weixin110\.qq|security.wechat)\.com\/cgi-bin\/mmspamsupport-bin\/newredirectconfirmcgi\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/wechat110.js
 
 # 哔哩哔哩 //app.bilibili.com, api.bilibili.com, manga.bilibili.com, api.vc.bilibili.com, api.biliapi.net, api.live.bilibili.com
+## 青少年弹窗提示
+^https?:\/\/app\.bilibili\.com\/x\/v2\/account\/teenagers\/timer\/get\? url reject-dict
 ## 屏蔽IP请求 //app.bilibili.com
 ^https?:\/\/app\.bilibili\.com\/x\/resource\/ip url reject
 ## 小卡片广告 //api.bilibili.com
@@ -93,7 +95,7 @@
 ## 我的页面处理 //app.bilibili.com
 ^https?:\/\/app\.bilibili\.com\/x\/v2\/account\/mine url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
 # 去除开屏广告,首页右上角游戏中心、推广,修改底部tab栏,去除推荐广告、创作者推广
-^https?:\/\/app\.bilibili\.com\/x\/(v2\/(splash\/(list|show)|feed\/index\?)|resource\/show\/tab\/v2) url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_json.js
+^https?:\/\/app\.bilibili\.com\/x\/(v2\/(splash\/(list|show)|feed\/index\?)|resource\/show\/tab) url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_json.js
 
 # 微博 //*.uve.weibo.com, api.weibo.cn, mapi.weibo.com, vip.storage.weibo.com
 ## 去除开屏广告 //*.uve.weibo.com
