--- a/Rewrites/MyBlockAds.conf
+++ b/Rewrites/MyBlockAds.conf
@@ -1,5 +1,5 @@
 # utf-8
-# 2022-07-16 10:12
+# 2022-07-16 10:28
 # 对【哔哩哔哩、微博、油管、知乎】的开屏广告和应用内广告进行处理，是对【AdvertisingLite.conf】的去重和补充
 
 # 屏蔽广告联盟：快手联盟,腾讯优量汇,穿山甲 //api-access.pangolin-sdk-toutiao.com, open.e.kuaishou.com, mi.gdt.qq.com
@@ -77,10 +77,8 @@
 ^https?:\/\/manga\.bilibili\.com\/twirp\/comic\.v\d\.Comic\/(Flash|ListFlash) url reject-dict
 ## 观影页面去广告 //api.bilibili.com, api.biliapi.net
 ^https?:\/\/api\.(bilibili|biliapi)\.(com|net)\/pgc\/page\/cinema\/tab\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
-## 应用开屏去广告
-^https:\/\/app\.bilibili\.com\/x\/v2\/splash\/show url reject-dict
 ## 应用开屏广告预加载 //app.bilibili.com
-^https:\/\/app\.bilibili\.com\/x\/v2\/splash\/list url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
+^https:\/\/app\.bilibili\.com\/x\/v2\/splash\/(list|show) url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
 ## 去除统一设置的皮肤 //app.bilibili.com
 ^https?:\/\/app\.bilibili\.com\/x\/resource\/show\/skin\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
 ## 1080P高码率+4K画质(番剧和影视除外) //app.bilibili.com
