--- a/Clash for myself/clash.ini
+++ b/Clash for myself/clash.ini
@@ -5,19 +5,21 @@ ruleset=REJECT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/ma
 ruleset=REJECT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Privacy/Privacy.list
 ruleset=REJECT,clash-domain:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Privacy/Privacy_Domain.yaml
 ruleset=ami@,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Telegram/Telegram.list
-ruleset=ami@,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/BiliBili/BiliBili.list
-ruleset=ami@,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Netflix/Netflix.list
-ruleset=ami@,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Disney/Disney.list
-ruleset=ami@,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/YouTube/YouTube.list
+ruleset=BiliBili,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/BiliBili/BiliBili.list
+ruleset=Netflix,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Netflix/Netflix.list
 ruleset=ami@,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Microsoft/Microsoft.list
 ruleset=ami@,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Google/Google.list
+ruleset=Media,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/GlobalMedia/GlobalMedia.list
+ruleset=Media,clash-domain:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/GlobalMedia/GlobalMedia_Domain.list
 ruleset=ami@,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Global/Global.list
 ruleset=ami@,clash-domain:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Global/Global_Domain.yaml
 ruleset=DIRECT,[]GEOIP,CN
 ruleset=ami@,[]FINAL
 
 custom_proxy_group=ami@`select`.*`[]DIRECT
-
+custom_proxy_group=Media`select`.*`[]DIRECT
+custom_proxy_group=Netfilx`select`.*`[]DIRECT
+custom_proxy_group=BiliBili`select`.*`[]DIRECT
 
 enable_rule_generator=true
 overwrite_original_rules=true
