--- a/Clash for myself/clash.ini
+++ b/Clash for myself/clash.ini
@@ -8,6 +8,7 @@ ruleset=ami@,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/mast
 ruleset=BiliBili,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/BiliBili/BiliBili.list
 ruleset=Netflix,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Netflix/Netflix.list
 ruleset=ami@,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Microsoft/Microsoft.list
+ruleset=YouTube,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/YouTube/YouTube.list
 ruleset=ami@,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Google/Google.list
 ruleset=Media,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/GlobalMedia/GlobalMedia.list
 ruleset=Media,clash-domain:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/GlobalMedia/GlobalMedia_Domain.list
@@ -19,6 +20,7 @@ ruleset=ami@,[]FINAL
 custom_proxy_group=ami@`select`.*`[]DIRECT
 custom_proxy_group=Media`select`.*`[]DIRECT
 custom_proxy_group=Netfilx`select`.*`[]DIRECT
+custom_proxy_group=YouTube`select`.*`[]DIRECT
 custom_proxy_group=BiliBili`select`.*`[]DIRECT
 
 enable_rule_generator=true
