--- a/QuantumultX/Rewrite/others.conf
+++ b/QuantumultX/Rewrite/others.conf
@@ -1,6 +1,6 @@
 hostname = ap?.bilibili.com, ap?.biliapi.net,  m.weibo.cn, mp.weixin.qq.com,sub.store,simple_cert_hostname=sub.store,weather-data.apple.com, weather-map.apple.com, api*.smoot.apple.com, api*.smoot.apple.cn, www.youtube.com
 # > 哔哩哔哩, 港澳台番剧自动切换地区 & 显示豆瓣评分
-^https:\/\/ap(p|i)\.bili(bili|api)\.(com|net)\/(pgc\/view\/v\d\/app\/season|x\/v\d\/search\/defaultwords)\?access_key url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Bili_Auto_Regions.js
+^https:\/\/ap(p|i)\.bili(bili|api)\.(com|net)\/(pgc\/view\/v\d\/app\/season|x\/offline\/version)\? url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Bili_Auto_Regions.js
 # > 用于搜索指定地区的番剧
 ^https:\/\/ap(p|i)\.bili(bili|api)\.(com|net)\/x\/v\d\/search(\/type)?\?.+?%20(%E6%B8%AF|%E5%8F%B0|%E4%B8%AD)& url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Bili_Auto_Regions.js
 # > BoxJs
