--- a/Clash for myself/clash.ini
+++ b/Clash for myself/clash.ini
@@ -4,24 +4,22 @@ ruleset=REJECT,clash-domain:https://raw.githubusercontent.com/blackmatrix7/ios_r
 ruleset=REJECT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Hijacking/Hijacking.list
 ruleset=REJECT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Privacy/Privacy.list
 ruleset=REJECT,clash-domain:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Privacy/Privacy_Domain.yaml
-ruleset=ami@,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Telegram/Telegram.list
-ruleset=BiliBili,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/BiliBili/BiliBili.list
-ruleset=Netflix,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Netflix/Netflix.list
-ruleset=ami@,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Microsoft/Microsoft.list
+ruleset=Proxy,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Telegram/Telegram.list
 ruleset=YouTube,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/YouTube/YouTube.list
-ruleset=ami@,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Google/Google.list
-ruleset=Media,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/GlobalMedia/GlobalMedia.list
-ruleset=Media,clash-domain:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/GlobalMedia/GlobalMedia_Domain.list
-ruleset=ami@,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Global/Global.list
-ruleset=ami@,clash-domain:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Global/Global_Domain.yaml
+ruleset=Proxy,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Microsoft/Microsoft.list
+ruleset=Proxy,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Google/Google.list
+ruleset=Asian Media,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/AsianMedia/AsianMedia.list
+ruleset=Global Media,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/GlobalMedia/GlobalMedia.list
+ruleset=Global Media,clash-domain:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/GlobalMedia/GlobalMedia_Domain.list
+ruleset=Proxy,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Global/Global.list
+ruleset=Proxy,clash-domain:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Global/Global_Domain.yaml
 ruleset=DIRECT,[]GEOIP,CN
-ruleset=ami@,[]FINAL
+ruleset=Proxy,[]FINAL
 
-custom_proxy_group=ami@`select`.*`[]DIRECT
-custom_proxy_group=Media`select`.*`[]DIRECT
-custom_proxy_group=Netflix`select`.*`[]DIRECT
-custom_proxy_group=YouTube`select`.*`[]DIRECT
-custom_proxy_group=BiliBili`select`.*`[]DIRECT
+custom_proxy_group=Proxy`select`.*`[]DIRECT
+custom_proxy_group=YouTube`美|USA`.*`[]DIRECT
+custom_proxy_group=Asian Media`select`港|台|Hong Kong|Taiwan`[]DIRECT
+custom_proxy_group=Global Media`select`港|台|新|Hong Kong|Taiwan|Singapore`[]DIRECT
 
 enable_rule_generator=true
 overwrite_original_rules=true
