--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -8,7 +8,7 @@
 #
 [general]
 ;profile_img_url=https://raw.githubusercontent.com/RuCu6/QuanX/main/Icons/Common/Quantumult_X.png
-;resource_parser_url= https://fastly.jsdelivr.net/gh/KOP-XIAO/QuantumultX@master/Scripts/resource-parser.js
+;resource_parser_url=https://fastly.jsdelivr.net/gh/KOP-XIAO/QuantumultX@master/Scripts/resource-parser.js
 ;resource_parser_url=https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/General/resource-parser.js
 ;network_check_url=http://connectivitycheck.platform.hicloud.com/generate_204
 ;network_check_url=http://wifi.vivo.com.cn/generate_204
