--- a/Rewrites/MyBlockAds.conf
+++ b/Rewrites/MyBlockAds.conf
@@ -1,9 +1,22 @@
 # utf-8
-# 2022-07-19 09:00
+# 2022-07-21 15:53
 # 对【哔哩哔哩、微博、油管、知乎】的开屏广告和应用内广告进行处理，是对【AdvertisingLite.conf】的去重和补充
 
 # 屏蔽广告联盟：快手联盟,腾讯优量汇,穿山甲 //api-access.pangolin-sdk-toutiao.com, open.e.kuaishou.com, mi.gdt.qq.com
 ^https:\/\/(api-access\.pangolin-sdk-toutiao\.com\/api\/ad\/union\/sdk\/get_ads|open\.e\.kuaishou\.com\/rest\/e\/v3\/open\/univ$|mi\.gdt\.qq\.com\/gdt_mview\.fcg\?) url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/adsense.js
+
+# 跳过重定向页面以直接访问
+## 简书 //links.jianshu.com, www.jianshu.com
+^https:\/\/links\.jianshu\.com\/go\?to= url script-echo-response https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/no_redirect.js
+^https:\/\/www\.jianshu\.com\/go-wild\?ac=\d&url= url script-echo-response https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/no_redirect.js
+## 微博 //weibo.cn, shop.sc.weibo.com, t.cn, sinaurl.cn
+^https?:\/\/weibo\.cn\/sinaurl\?(.*&)?(u|toasturl|goto)= url script-echo-response https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/no_redirect.js
+^https:\/\/shop\.sc\.weibo\.com\/h5\/jump\/error\?(.*&)?url= url script-echo-response https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/no_redirect.js
+^https?:\/\/(sinaurl|t)\.cn\/ url script-response-header https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/no_redirect.js
+## 知乎 //link.zhihu.com
+;^https:\/\/link\.zhihu\.com\/\?target=(https?)?(%3A|:)?(\/\/|%2F%2F)?(.*?)(&source.*)?$ url 302 http://$4
+## 115 //home.115.com
+^https:\/\/home\.115\.com\/go\?(https?:\/\/)?(.*) url 302 http://$2
 
 # 网上国网 //static.esgcc.com.cn
 ;^https?:\/\/static\.esgcc\.com\.cn\/static\/exj\/upload.+? url reject
@@ -12,7 +25,7 @@
 ^https?:\/\/zimuku\.(pw|org)\/\w{0,3}\.gif$ url reject-img
 
 # RARBG屏蔽跳转 //swallowcrockerybless.com
-;^https?:\/\/swallowcrockerybless\.com.+? url reject-dict
+;^https?:\/\/swallowcrockerybless\.com\?.* url reject-dict
 
 # 淘宝开屏广告 //amdc.m.taobao.com
 ^https?:\/\/amdc\.m\.taobao\.com\/amdc\/mobileDispatch url reject-dict
@@ -26,18 +39,6 @@
 
 # 交管12123 //gab.122.gov.cn
 ^https?:\/\/gab\.122\.gov\.cn\/eapp\/m\/sysquery url reject
-
-# Skip Redirect Page
-## 简书 //links.jianshu.com, www.jianshu.com
-^https:\/\/links\.jianshu\.com\/go\?to= url script-echo-response https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/no_redirect.js
-^https:\/\/www\.jianshu\.com\/go-wild\?ac=\d&url= url script-echo-response https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/no_redirect.js
-## 微博 //weibo.cn, shop.sc.weibo.com, t.cn, sinaurl.cn
-^https?:\/\/weibo\.cn\/sinaurl\?(.*&)?(u|toasturl|goto)= url script-echo-response https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/no_redirect.js
-^https:\/\/shop\.sc\.weibo\.com\/h5\/jump\/error\?(.*&)?url= url script-echo-response https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/no_redirect.js
-^https?:\/\/(sinaurl|t)\.cn\/ url script-response-header https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/no_redirect.js
-## 知乎 //link.zhihu.com
-^https:\/\/link\.zhihu\.com\/\?target=(https?)?(%3A|:)?(\/\/|%2F%2F)?(.*?)(&source.*)?$ url 302 http://$4
-;^https:\/\/link\.zhihu\.com\/\?target= url script-echo-response https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/no_redirect.js
 
 # 铁路 12306 开屏广告(倒计时仍然存在) //ad.12306.cn
 ^https?:\/\/ad\.12306\.cn\?.* url reject
@@ -179,4 +180,4 @@
 ## 屏蔽网页版强制登陆弹窗 //static.zhihu.com
 ^https?:\/\/static\.zhihu\.com\/[^\/]+\/(main|column)\.signflow\.[^.]+.js url reject-200
 
-hostname = api-access.pangolin-sdk-toutiao.com, open.e.kuaishou.com, mi.gdt.qq.com, zimuku.pw, zimuku.org, amdc.m.taobao.com, cdn.*.chelaileapp.cn, gab.122.gov.cn, links.jianshu.com, www.jianshu.com, weibo.cn, shop.sc.weibo.com, t.cn, sinaurl.cn, link.zhihu.com, ad.12306.cn, edith.xiaohongshu.com, mp.weixin.qq.com, weixin110.qq.com, security.wechat.com, app.bilibili.com, api.bilibili.com, api.vc.bilibili.com, manga.bilibili.com, api.biliapi.net, api.live.bilibili.com, *.uve.weibo.com, api.weibo.cn, mapi.weibo.com, vip.storage.weibo.com, -redirector*.googlevideo.com, *.googlevideo.com, www.youtube.com, s.youtube.com, youtubei.googleapis.com, 103.41.167.226, 103.41.167.234, 103.41.167.235, 103.41.167.236, api.zhihu.com, www.zhihu.com, appcloud2.zhihu.com, zhuanlan.zhihu.com, static.zhihu.com
+hostname = api-access.pangolin-sdk-toutiao.com, open.e.kuaishou.com, mi.gdt.qq.com, links.jianshu.com, www.jianshu.com, weibo.cn, shop.sc.weibo.com, t.cn, sinaurl.cn, home.115.com, zimuku.pw, zimuku.org, amdc.m.taobao.com, cdn.*.chelaileapp.cn, gab.122.gov.cn, ad.12306.cn, edith.xiaohongshu.com, mp.weixin.qq.com, weixin110.qq.com, security.wechat.com, app.bilibili.com, api.bilibili.com, api.vc.bilibili.com, manga.bilibili.com, api.biliapi.net, api.live.bilibili.com, *.uve.weibo.com, api.weibo.cn, mapi.weibo.com, vip.storage.weibo.com, -redirector*.googlevideo.com, *.googlevideo.com, www.youtube.com, s.youtube.com, youtubei.googleapis.com, 103.41.167.226, 103.41.167.234, 103.41.167.235, 103.41.167.236, api.zhihu.com, www.zhihu.com, appcloud2.zhihu.com, zhuanlan.zhihu.com, static.zhihu.com
