--- a/Rewrites/WebPage.conf
+++ b/Rewrites/WebPage.conf
@@ -1,5 +1,5 @@
 # utf-8
-# 2022-07-15 11:06
+# 2022-07-21 17:47
 
 # 桌面端请使用 https://google.com/ncr
 # Redirect Google Service //*.google.cn
@@ -17,6 +17,12 @@
 # 内容农场(bing) //www.bing.com
 ^https?:\/\/(www\.bing)(\.\w{2,4}){1,2}\/(search\?.*|\?sa=|\?FORM)(?!.*?(apps=)).* url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/Limbo/Adblock4limbo_qx.js
 # 内容农场(google) //*.google.*
-^https?:\/\/(www\.google)(\.\w{2,4}){1,2}\/search\?(?!.*?(apps=)).* url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/Limbo/Adblock4limbo_qx.js
+;^https?:\/\/(www\.google)(\.\w{2,4}){1,2}\/search\?(?!.*?(apps=)).* url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/Limbo/Adblock4limbo_qx.js
 
-hostname = *.google.cn, zhidao.baidu.com, www.baidu.com, m.baidu.com, www.bing.com
+# 更换 User-Agent 以提升体验
+## 百度 (全站替换为手机百度 Quark 的 User-Agent) //*.baidu.com
+^https?:\/\/(?!d\.pcs).*(?<!map)\.baidu\.com url request-header (\r\n)User-Agent:.+iPhone.+(\r\n) request-header $1User-Agent: Mozilla/5.0 (iPhone; CPU iPhone OS 13_5 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/13.1.1 Mobile/15E148 Safari/16C50 Quark/604.1 T7/10.3 SearchCraft/2.6.3 (Baidu; P1 8.0.0)$2
+## 知乎 (部分替换为手机百度 Quark 的 User-Agent) //www.zhihu.com
+^https?:\/\/www\.zhihu\.com url request-header (\r\n)User-Agent:.+(\r\n) request-header $1User-Agent: Mozilla/5.0 (iPhone; CPU iPhone OS 13_5 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/13.1.1 Mobile/15E148 Safari/16C50 Quark/604.1 T7/10.3 SearchCraft/2.6.3 (Baidu; P1 8.0.0)$2
+
+hostname = *.google.cn, zhidao.baidu.com, www.baidu.com, m.baidu.com, www.bing.com, *.baidu.com, www.zhihu.com
