--- a/Rewrites/MyBlockAds.conf
+++ b/Rewrites/MyBlockAds.conf
@@ -118,7 +118,9 @@
 ^https?:\/\/s\.youtube\.com\/api\/stats\/qoe\?adcontext url reject-dict
 
 # 知乎 //appcloud2.zhihu.com, www.zhihu.com, api.zhihu.com
-# 开屏页广告,首页右下角悬浮框,推荐列表广告,问题回答列表广告,具体回答下广告
+## 开屏页广告,首页右下角悬浮框,推荐列表广告,问题回答列表广告,具体回答下广告
 ^https:\/\/(appcloud2\.zhihu\.com\/v3\/config$|www\.zhihu\.com\/api\/v4\/(answers\/\d+\/recommendations|articles\/\d+\/recommendation)|api\.zhihu\.com\/(topstory\/recommend|commercial_api\/(real_time_launch_v2|app_float_layer$)|questions\/\d+\/feeds\?|v4\/questions\/\d+\/answers\?)) url script-response-body https://raw.githubusercontent.com/app2smile/rules/master/js/zhihu.js
+## 屏蔽网页限制 //static.zhihu.com
+^https://static\.zhihu\.com/[^/]+/(main|column)\.signflow\.[^.]+.js url reject-dict
 
 hostname = api-access.pangolin-sdk-toutiao.com, open.e.kuaishou.com, mi.gdt.qq.com, links.jianshu.com, www.jianshu.com, weibo.cn, shop.sc.weibo.com, t.cn, sinaurl.cn, home.115.com, zimuku.pw, zimuku.org, amdc.m.taobao.com, cdn.*.chelaileapp.cn, gab.122.gov.cn, ad.12306.cn, edith.xiaohongshu.com, mp.weixin.qq.com, weixin110.qq.com, security.wechat.com, app.bilibili.com, api.bilibili.com, api.vc.bilibili.com, manga.bilibili.com, api.biliapi.net, api.live.bilibili.com, *.uve.weibo.com, api.weibo.cn, mapi.weibo.com, vip.storage.weibo.com, -redirector*.googlevideo.com, *.googlevideo.com, www.youtube.com, s.youtube.com, youtubei.googleapis.com, appcloud2.zhihu.com, www.zhihu.com, api.zhihu.com
