--- a/Rewrites/MyBlockAds.conf
+++ b/Rewrites/MyBlockAds.conf
@@ -117,7 +117,7 @@
 ^https?:\/\/(www|s)\.youtube\.com\/(pagead|ptracking) url reject-dict
 ^https?:\/\/s\.youtube\.com\/api\/stats\/qoe\?adcontext url reject-dict
 
-# 知乎
+# 知乎 //appcloud2.zhihu.com, www.zhihu.com, api.zhihu.com, static.zhihu.com
 ## 开屏页广告,首页右下角悬浮框,推荐列表广告,问题回答列表广告,具体回答下广告 //appcloud2.zhihu.com, www.zhihu.com, api.zhihu.com
 ^https:\/\/(appcloud2\.zhihu\.com\/v3\/config$|www\.zhihu\.com\/api\/v4\/(answers\/\d+\/recommendations|articles\/\d+\/recommendation)|api\.zhihu\.com\/(topstory\/recommend|commercial_api\/(real_time_launch_v2|app_float_layer$)|questions\/\d+\/feeds\?|v4\/questions\/\d+\/answers\?)) url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/zhihu_2.js
 ## 屏蔽网页限制 //static.zhihu.com
